# sfi

./: README.md  setup.cfg
src/BtgSfi/: sfi.py  test.txt  winexe.txt
src/btgsfi/: winexe.txt
