[metadata]
name = btgsfi
version = 0.0.2
author = Bridgey the Geek
author_email = bridgeythegeek@gmail.com
description = Suspicious Filename Identifier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bridgeythegeek/sfi
project_urls =
    Bug Tracker = https://github.com/bridgeythegeek/sfi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
